Get "---" out of \bibemph{}

--- a/tex/p018.tex
+++ b/tex/p018.tex
@@ -27,7 +27,7 @@
 \vs p018 3:1 When mortals of time graduate from the training worlds surrounding the headquarters of a local universe and are advanced to the educational spheres of their superuniverse, they have progressed in spiritual development to that point where they are able to recognize and communicate with the high spiritual rulers and directors of these advanced realms, including the Ancients of Days.
 \vs p018 3:2 The Ancients of Days are all basically identical; they disclose the combined character and unified nature of the Trinity. They possess individuality and are in personality diverse, but they do not differ from each other as do the Seven Master Spirits. They provide the uniform directorship of the otherwise differing seven superuniverses, each of which is a distinct, segregated, and unique creation. The Seven Master Spirits are unlike in nature and attributes, but the Ancients of Days, the personal rulers of the superuniverses, are all uniform and superperfect offspring of the Paradise Trinity.
 \vs p018 3:3 The Seven Master Spirits on high determine the \bibemph{nature} of their respective superuniverses, but the Ancients of Days dictate the \bibemph{administration} of these same superuniverses. They superimpose administrative uniformity on creative diversity and ensure the harmony of the whole in the face of the underlying creational differences of the seven segmental groupings of the grand universe.
-\vs p018 3:4 \pc The Ancients of Days were all trinitized at the same time. They represent the beginning of the personality records of the universe of universes, hence their name \bibemph{--- Ancients} of Days. When you reach Paradise and search the written records of the beginning of things, you will find that the first entry appearing in the personality section is the recital of the trinitization of these 21 Ancients of Days.
+\vs p018 3:4 \pc The Ancients of Days were all trinitized at the same time. They represent the beginning of the personality records of the universe of universes, hence their name --- \bibemph{Ancients} of Days. When you reach Paradise and search the written records of the beginning of things, you will find that the first entry appearing in the personality section is the recital of the trinitization of these 21 Ancients of Days.
 \vs p018 3:5 \pc These high beings always govern in groups of three. There are many phases of activity in which they work as individuals, still others in which any two can function, but in the higher spheres of their administration they must act jointly. They never personally leave their residential worlds, but then they do not have to, for these worlds are the superuniverse focal points of the far\hyp{}flung reflectivity system.
 \vs p018 3:6 The personal abodes of each trio of the Ancients of Days are located at the point of spiritual polarity on their headquarters sphere. Such a sphere is divided into 70 administrative sectors and has 70 divisional capitals in which the Ancients of Days reside from time to time.
 \vs p018 3:7 In power, scope of authority, and extent of jurisdiction the Ancients of Days are the most powerful and mighty of any of the direct rulers of the time\hyp{}space creations. In all the vast universe of universes they alone are invested with the high powers of final executive judgment concerning the eternal extinction of will creatures. And all three Ancients of Days must participate in the final decrees of the supreme tribunal of a superuniverse.
@@ -36,7 +36,7 @@
 \usection{4.\bibnobreakspace The Perfections of Days}
 \vs p018 4:1 There are just 210 Perfections of Days, and they preside over the governments of the ten major sectors of each superuniverse. They were trinitized for the special work of assisting the superuniverse directors, and they rule as the immediate and personal vicegerents of the Ancients of Days.
 \vs p018 4:2 Three Perfections of Days are assigned to each major sector capital, but unlike the Ancients of Days, it is not necessary that all three be present at all times. From time to time one of this trio may absent himself to confer in person with the Ancients of Days concerning the welfare of his realm.
-\vs p018 4:3 \pc These triune rulers of the major sectors are peculiarly perfect in the mastery of administrative details, hence their name \bibemph{--- Perfections} of Days. In recording the names of these beings of the spiritual world, we are confronted with the problem of translating into your tongue, and very often it is exceedingly difficult to render a satisfactory translation. We dislike to use arbitrary designations which would be meaningless to you; hence we often find it difficult to choose a suitable name, one which will be clear to you and at the same time be somewhat representative of the original.
+\vs p018 4:3 \pc These triune rulers of the major sectors are peculiarly perfect in the mastery of administrative details, hence their name --- \bibemph{Perfections} of Days. In recording the names of these beings of the spiritual world, we are confronted with the problem of translating into your tongue, and very often it is exceedingly difficult to render a satisfactory translation. We dislike to use arbitrary designations which would be meaningless to you; hence we often find it difficult to choose a suitable name, one which will be clear to you and at the same time be somewhat representative of the original.
 \vs p018 4:4 \pc The Perfections of Days have a moderate\hyp{}sized corps of Divine Counsellors, Perfectors of Wisdom, and Universal Censors attached to their governments. They have still larger numbers of Mighty Messengers, Those High in Authority, and Those without Name and Number. But much of the routine work of major sector affairs is carried on by the Celestial Guardians and the High Son Assistants. These two groups are drawn from among the trinitized offspring of either Paradise\hyp{}Havona personalities or glorified mortal finaliters. Certain of these two orders of creature\hyp{}trinitized beings are retrinitized by the Paradise Deities and then are dispatched to assist in the administration of the superuniverse governments.
 \vs p018 4:5 Most of the Celestial Guardians and the High Son Assistants are assigned to the service of the major and the minor sectors, but the Trinitized Custodians (Trinity\hyp{}embraced seraphim and midwayers) are the officers of the courts of all three divisions, functioning in the tribunals of the Ancients of Days, the Perfections of Days, and the Recents of Days. The Trinitized Ambassadors (Trinity\hyp{}embraced ascendant mortals of Son\hyp{} or Spirit\hyp{}fused nature) may be encountered anywhere in a superuniverse, but the majority are in the service of the minor sectors.
 \vs p018 4:6 Before the times of the full unfolding of the governmental scheme of the seven superuniverses, practically all administrators of the various divisions of these governments, excepting the Ancients of Days, served apprenticeships of varying duration under the Eternals of Days on the various worlds of the perfect Havona universe. The later trinitized beings likewise passed through a season of training under the Eternals of Days before they were attached to the service of the Ancients of Days, the Perfections of Days, and the Recents of Days. They are all seasoned, tried, and experienced administrators.
@@ -52,7 +52,7 @@
 \usection{6.\bibnobreakspace The Unions of Days}
 \vs p018 6:1 The Trinity personalities of the order of “Days” do not function in an administrative capacity below the level of the superuniverse governments. In the evolving local universes they act only as counsellors and advisers. The Unions of Days are a group of liaison personalities accredited by the Paradise Trinity to the dual rulers of the local universes. Each organized and inhabited local universe has assigned to it one of these Paradise counsellors, who acts as the representative of the Trinity, and in some respects, of the Universal Father, to the local creation.
 \vs p018 6:2 There are 700,000 of these beings in existence, though they have not all been commissioned. The reserve corps of the Unions of Days functions on Paradise as the Supreme Council of Universe Adjustments.
-\vs p018 6:3 In a special manner these Trinity observers co\hyp{}ordinate the administrative activities of all branches of the universal government, from those of the local universes up through the sector governments to those of the superuniverse, hence their name \bibemph{--- Unions} of Days. They make a threefold report to their superiors: They report pertinent data of a physical and semi\hyp{}intellectual nature to the Recents of Days of their minor sector; they report intellectual and quasi\hyp{}spiritual happenings to the Perfections of Days of their major sector; they report spiritual and semiparadisiacal matters to the Ancients of Days at the capital of their superuniverse.
+\vs p018 6:3 In a special manner these Trinity observers co\hyp{}ordinate the administrative activities of all branches of the universal government, from those of the local universes up through the sector governments to those of the superuniverse, hence their name --- \bibemph{Unions} of Days. They make a threefold report to their superiors: They report pertinent data of a physical and semi\hyp{}intellectual nature to the Recents of Days of their minor sector; they report intellectual and quasi\hyp{}spiritual happenings to the Perfections of Days of their major sector; they report spiritual and semiparadisiacal matters to the Ancients of Days at the capital of their superuniverse.
 \vs p018 6:4 Since they are Trinity\hyp{}origin beings, all of the Paradise circuits are available to them for intercommunication, and thus are they always in touch with each other and with all other required personalities up to the supreme councils of Paradise.
 \vs p018 6:5 \pc A Union of Days is not organically connected with the government of the local universe of his assignment. Aside from his duties as an observer, he acts only at the request of the local authorities. He is an ex officio member of all primary councils and all important conclaves of the local creation, but he does not participate in the technical consideration of administrative problems.
 \vs p018 6:6 When a local universe is settled in light and life, its glorified beings associate freely with the Union of Days, who then functions in an enlarged capacity in such a realm of evolutionary perfection. But he is still primarily a Trinity ambassador and Paradise counsellor.
