--- a/tex/p026.tex
+++ b/tex/p026.tex
@@ -51,7 +51,7 @@
 \vs p026 4:10 \pc Each of these working groups contains angels of all seven created types, and a pilgrim of space is always tutored by secondary supernaphim of origin in the Master Spirit who presides over that pilgrim’s superuniverse of nativity. When you mortals of Urantia attain Havona, you will certainly be piloted by supernaphim whose created natures --- like your own evolved natures --- are derived from the Master Spirit of Orvonton. And since your tutors spring from the Master Spirit of your own superuniverse, they are especially qualified to understand, comfort, and assist you in all your efforts to attain Paradise perfection.
 \vs p026 4:11 The pilgrims of time are transported past the dark gravity bodies of Havona to the outer planetary circuit by the transport personalities of the primary order of seconaphim, operating from the headquarters of the seven superuniverses. A majority, but not all, of the seraphim of planetary and local universe service who have been accredited for the Paradise ascent will part with their mortal associates before the long flight to Havona and will at once begin a long and intense training for supernal assignment, expecting to achieve, as seraphim, perfection of existence and supremacy of service. And this they do, hoping to rejoin the pilgrims of time, to be reckoned among those who forever follow the course of such mortals as have attained the Universal Father and have received assignment to the undisclosed service of the Corps of the Finality.
 \vs p026 4:12 The pilgrim lands on the receiving planet of Havona, the pilot world of the seventh circuit, with only one endowment of perfection, perfection of purpose. The Universal Father has decreed: “Be you perfect, even as I am perfect.” That is the astounding invitation\hyp{}command broadcast to the finite children of the worlds of space. The promulgation of that injunction has set all creation astir in the co\hyp{}operative effort of the celestial beings to assist in bringing about the fulfilment and realization of that tremendous command of the First Great Source and Centre.
-\vs p026 4:13 When, through and by the ministry of all the helper hosts of the universal scheme of survival, you are finally deposited on the receiving world of Havona, you arrive with only one sort of perfection \bibemph{--- perfection of purpose.} Your purpose has been thoroughly proved; your faith has been tested. You are known to be disappointment proof. Not even the failure to discern the Universal Father can shake the faith or seriously disturb the trust of an ascendant mortal who has passed through the experience that all must traverse in order to attain the perfect spheres of Havona. By the time you reach Havona, your sincerity has become sublime. Perfection of purpose and divinity of desire, with steadfastness of faith, have secured your entrance to the settled abodes of eternity; your deliverance from the uncertainties of time is full and complete; and now must you come face to face with the problems of Havona and the immensities of Paradise, to meet which you have so long been in training in the experiential epochs of time on the world schools of space.
+\vs p026 4:13 When, through and by the ministry of all the helper hosts of the universal scheme of survival, you are finally deposited on the receiving world of Havona, you arrive with only one sort of perfection --- \bibemph{perfection of purpose.} Your purpose has been thoroughly proved; your faith has been tested. You are known to be disappointment proof. Not even the failure to discern the Universal Father can shake the faith or seriously disturb the trust of an ascendant mortal who has passed through the experience that all must traverse in order to attain the perfect spheres of Havona. By the time you reach Havona, your sincerity has become sublime. Perfection of purpose and divinity of desire, with steadfastness of faith, have secured your entrance to the settled abodes of eternity; your deliverance from the uncertainties of time is full and complete; and now must you come face to face with the problems of Havona and the immensities of Paradise, to meet which you have so long been in training in the experiential epochs of time on the world schools of space.
 \vs p026 4:14 Faith has won for the ascendant pilgrim a perfection of purpose which admits the children of time to the portals of eternity. Now must the pilgrim helpers begin the work of developing that perfection of understanding and that technique of comprehension which are so indispensable to Paradise perfection of personality.
 \vs p026 4:15 \bibemph{Ability to comprehend is the mortal passport to Paradise.} Willingness to believe is the key to Havona. The acceptance of sonship, co\hyp{}operation with the indwelling Adjuster, is the price of evolutionary survival.
 \usection{5.\bibnobreakspace The Pilgrim Helpers}
