--- a/tex/p040.tex
+++ b/tex/p040.tex
@@ -79,7 +79,7 @@
 \vs p040 10:3 \pc The mysterious variable in associative technique whereby a mortal being does not or cannot become eternally fused with the indwelling Thought Adjuster may seem to disclose a flaw in the ascension scheme; Son and Spirit fusion do, superficially, resemble compensations of unexplained failures in some detail of the Paradise\hyp{}attainment plan; but all such conclusions stand in error; we are taught that all these happenings unfold in obedience to the established laws of the Supreme Universe Rulers.
 \vs p040 10:4 We have analysed this problem and have reached the undoubted conclusion that the consignment of all mortals to an ultimate Paradise destiny would be unfair to the time\hyp{}space universes inasmuch as the courts of the Creator Sons and of the Ancients of Days would then be wholly dependent on the services of those who were in transit to higher realms. And it does seem to be no more than fitting that the local and the superuniverse governments should each be provided with a permanent group of ascendant citizenship; that the functions of these administrations should be enriched by the efforts of certain groups of glorified mortals who are of permanent status, evolutionary complements of the abandonters and of the susatia. Now it is quite obvious that the present ascension scheme effectively provides the time\hyp{}space administrations with just such groups of ascendant creatures; and we have many times wondered: Does all this represent an intended part of the all\hyp{}wise plans of the Architects of the Master Universe designed to provide the Creator Sons and the Ancients of Days with a permanent ascendant population? with evolved orders of citizenship that will become increasingly competent to carry forward the affairs of these realms in the universe ages to come?
 \vs p040 10:5 \pc That mortal destinies do thus vary in no wise proves that one is necessarily greater or lesser than another, merely that they differ. Adjuster\hyp{}fused ascenders do indeed have a grand and glorious career as finaliters spread out before them in the eternal future, but this does not mean that they are preferred above their ascendant brethren. There is no favouritism, nothing arbitrary, in the selective operation of the divine plan of mortal survival.
-\vs p040 10:6 \pc While the Adjuster\hyp{}fused finaliters obviously enjoy the widest service opportunity of all, the attainment of this goal automatically shuts them off from the chance to participate in the agelong struggle of some one universe or superuniverse, from the earlier and less settled epochs to the later and established eras of relative perfection attainment. Finaliters acquire a marvellous and far\hyp{}flung experience of transient service in all seven segments of the grand universe, but they do not ordinarily acquire that intimate knowledge of any one universe which even now characterizes the Spirit\hyp{}fused veterans of the Nebadon Corps of Completion. These individuals enjoy an opportunity to witness the ascending processional of the planetary ages as they unfold one by one on 10,000,000 inhabited worlds. And in the faithful service of such local universe citizens, experience superimposes upon experience until the fullness of time ripens that high quality of wisdom which is engendered by focalized experience \bibemph{--- authoritative} wisdom --- and this in itself is a vital factor in the settling of any local universe.
+\vs p040 10:6 \pc While the Adjuster\hyp{}fused finaliters obviously enjoy the widest service opportunity of all, the attainment of this goal automatically shuts them off from the chance to participate in the agelong struggle of some one universe or superuniverse, from the earlier and less settled epochs to the later and established eras of relative perfection attainment. Finaliters acquire a marvellous and far\hyp{}flung experience of transient service in all seven segments of the grand universe, but they do not ordinarily acquire that intimate knowledge of any one universe which even now characterizes the Spirit\hyp{}fused veterans of the Nebadon Corps of Completion. These individuals enjoy an opportunity to witness the ascending processional of the planetary ages as they unfold one by one on 10,000,000 inhabited worlds. And in the faithful service of such local universe citizens, experience superimposes upon experience until the fullness of time ripens that high quality of wisdom which is engendered by focalized experience --- \bibemph{authoritative} wisdom --- and this in itself is a vital factor in the settling of any local universe.
 \vs p040 10:7 As it is with the Spirit fusers, so is it with those Son\hyp{}fused mortals who have achieved residential status on Uversa. Some of these beings hail from the earliest epochs of Orvonton, and they represent a slowly accumulating body of insight\hyp{}deepening wisdom which is making ever\hyp{}augmenting service contributions to the welfare and eventual settlement of the seventh superuniverse.
 \vs p040 10:8 \pc What the ultimate destiny of these stationary orders of local and of superuniverse citizenship will be we do not know, but it is quite possible that, when the Paradise finaliters are pioneering the expanding frontiers of divinity in the planetary systems of the first outer space level, their Son\hyp{} and Spirit\hyp{}fused brethren of the ascendant evolutionary struggle will be acceptably contributing to the maintenance of the experiential equilibrium of the perfected superuniverses while they stand ready to welcome the incoming stream of Paradise pilgrims who may, at that distant day, pour in through Orvonton and its sister creations as a vast spirit\hyp{}questing torrent from these now uncharted and uninhabited galaxies of outer space.
 \vs p040 10:9 \pc While the majority of Spirit fusers serve permanently as citizens of the local universes, all do not. If some phase of their universe ministry should require their personal presence in the superuniverse, then would such transformations of being be wrought in these citizens as would enable them to ascend to the higher universe; and upon the arrival of the Celestial Guardians with orders to present such Spirit\hyp{}fused mortals at the courts of the Ancients of Days, they would so ascend, never to return. They become wards of the superuniverse, serving as assistants to the Celestial Guardians and permanently, save for those few who are in turn summoned to the service of Paradise and Havona.
