--- a/tex/p115.tex
+++ b/tex/p115.tex
@@ -21,7 +21,7 @@
 \vs p115 3:7 \ublistelem{2.}\bibnobreakspace \bibemph{The Actual.} The union of the three Absolutes of actuality, the Second, Third, and Paradise Sources and Centres. This triodity of the Eternal Son, the Infinite Spirit, and the Paradise Isle constitutes the actual revelation of the originality of the First Source and Centre.
 \vs p115 3:8 \ublistelem{3.}\bibnobreakspace \bibemph{The Potential.} The union of the three Absolutes of potentiality, the Deity, Unqualified, and Universal Absolutes. This triodity of existential potentiality constitutes the potential revelation of the originality of the First Source and Centre.
 \vs p115 3:9 \pc The interassociation of the Original, the Actual, and the Potential yields the tensions within infinity which result in the possibility for all universe growth; and growth is the nature of the Sevenfold, the Supreme, and the Ultimate.
-\vs p115 3:10 In the association of the Deity, Universal, and Unqualified Absolutes, potentiality is absolute while actuality is emergent; in the association of the Second, Third, and Paradise Sources and Centres, actuality is absolute while potentiality is emergent; in the originality of the First Source and Centre, we cannot say that either actuality or potentiality is either existent or emergent \bibemph{--- the Father is.}
+\vs p115 3:10 In the association of the Deity, Universal, and Unqualified Absolutes, potentiality is absolute while actuality is emergent; in the association of the Second, Third, and Paradise Sources and Centres, actuality is absolute while potentiality is emergent; in the originality of the First Source and Centre, we cannot say that either actuality or potentiality is either existent or emergent --- \bibemph{the Father is.}
 \vs p115 3:11 From the time viewpoint, the Actual is that which was and is; the Potential is that which is becoming and will be; the Original is that which is. From the eternity viewpoint, the differences between the Original, the Actual, and the Potential are not thus apparent. These triune qualities are not so distinguished on Paradise\hyp{}eternity levels. In eternity all is --- only has all not yet been revealed in time and space.
 \vs p115 3:12 From a creature’s viewpoint, actuality is substance, potentiality is capacity. Actuality exists centremost and expands therefrom into peripheral infinity; potentiality comes inward from the infinity periphery and converges at the centre of all things. Originality is that which first causes and then balances the dual motions of the cycle of reality metamorphosis from potentials to actuals and the potentializing of existing actuals.
 \vs p115 3:13 The three Absolutes of potentiality are operative on the purely eternal level of the cosmos, hence never function as such on subabsolute levels. On the descending levels of reality the triodity of potentiality is manifest with the Ultimate and upon the Supreme. The potential may fail to time\hyp{}actualize with respect to a part on some subabsolute level, but never in the aggregate. The will of God does ultimately prevail, not always concerning the individual but invariably concerning the total.
