--- a/tex/p120.tex
+++ b/tex/p120.tex
@@ -47,5 +47,5 @@
 \vs p120 4:3 Christ Michael did not progressively become God. God did not, at some vital moment in the earth life of Jesus, become man. Jesus was God \bibemph{and} man --- always and even forevermore. And this God and this man were, and now are, \bibemph{one,} even as the Paradise Trinity of three beings is in reality \bibemph{one} Deity.
 \vs p120 4:4 Never lose sight of the fact that the supreme spiritual purpose of the Michael bestowal was to enhance the \bibemph{revelation of God.}
 \vs p120 4:5 \pc Urantia mortals have varying concepts of the miraculous, but to us who live as citizens of the local universe there are few miracles, and of these by far the most intriguing are the incarnational bestowals of the Paradise Sons. The appearance in and on your world, by apparently natural processes, of a divine Son, we regard as a miracle --- the operation of universal laws beyond our understanding. Jesus of Nazareth was a miraculous person.
-\vs p120 4:6 In and through all this extraordinary experience, God the Father chose to manifest himself as he always does \bibemph{--- in the usual way ---} in the normal, natural, and dependable way of divine acting.
+\vs p120 4:6 In and through all this extraordinary experience, God the Father chose to manifest himself as he always does --- \bibemph{in the usual way} --- in the normal, natural, and dependable way of divine acting.
 \quizlink
